tests/e2e/semantics/foreach_no_any.error
Error: syntax error in story at line 2, column 9

2|    foreach a as e
              ^

E0106: `foreach` requires an iterable type, but `any` is not
