tests/e2e/semantics/foreach_no_any.story
a = 1 to any
foreach a as e
    c = e
